# io_emulator

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
doc/: principle.graphez  principle.graphez.out
include/: command.hpp  commands_impl.hpp  completion.hpp  conf_parser.hpp  conf_parser_impl.hpp  db.hpp  terminal.hpp
lib/x86_64-windows/debug/libreadline/lib/: libreadline.lib
lib/x86_64-windows/release/libreadline/lib/: libreadline.lib
src/: main.cc
tools/: msbuild.bat
